--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Diseñamos y desarrollamos páginas web modernas y eficientes." />
+    <meta name="keywords" content="diseño web, desarrollo web, landing page, SEO básico" />
+    <meta name="author" content="Benjamín Veli Mariano" />
     <title>Tomso</title>
   </head>
   <body>
